[project]
name = "biaminofeedbacktg"
version = "0.1.0"
description = "Telegram bot for automated feedback collection and daily reports"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "apscheduler>=3.11.0",
    "google-auth>=2.40.3",
    "gspread>=6.2.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pytz>=2025.2",
    "redis>=6.4.0",
]
